<resources xmlns:tools="http://schemas.android.com/tools">
    <integer name="slide_animation_duration">300</integer>

    <string name="app_name">HPCLPOS</string>
    <string name="reload">Reload</string>
    <string name="cashreload">Cash Reload</string>
    <string name="chequereload">Cheque Reload</string>
    <string name="ccmsreload">Ccms Reload</string>
    <string name="payback">PAYBACK</string>
    <string name="entercheckno">Enter Check No. and MICR Code</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterterminal">Enter Terminal Pin</string>
    <string name="entermerchant">Merchant Pin</string>

    <string name="title_activity_void_enter_amount">VoidEnterAmountActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">NEXT</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="driverloyalty">Driver Loyalty</string>
    <string name="dtp">DTP</string>
    <string name="nondtp">NON DTP</string>
    <string name="selectfuel">Select Fuel</string>
    <string name="enterpoint">Enter Points To Redeem</string>
    <string name="presentcard">Present Card</string>
    <string name="printblnc">Print Balance</string>
    <string name="yes">Yes</string>
    <string name="transuccess">Transaction Success</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="changeTermPin">Change Terminal Pin</string>
    <string name="enteroldpin">Enter Old Pin</string>
    <string name="enternewpin">Enter New Pin</string>
    <string name="reenternewpin">Re-Enter New Pin</string>
    <string name="loyltyblnc">Loyalty Balance</string>
    <string name="enterctrlcrdno">Enter CTRL Card No:</string>
    <string name="enterctrlpin">Enter Control Pin</string>
    <string name="entervalidamount">Enter Valid Amount</string>
    <string name="entervalidcardpin">Enter Valid Card Pin</string>
    <string name="enterterminalpin">Enter Valid Terminal Pin</string>
    <string name="entervalidotp">Enter Valid Otp</string>
    <string name="entervalidmono">Enter Valid Mobile Number</string>
    <string name="entervalidctrlpin">Enter Valid Control Pin</string>
    <string name="terminalpin">Terminal Pin</string>
    <string name="entervalirocno">Enter Valid ROC No</string>
    <string name="mismatchrocno">Mismatch ROC No</string>
    <string name="entervalidctrno">Enter Valid Control Card No</string>
    <string name="entervalidredeempoints">Enter Valid Redeem Points</string>
    <string name="operatoroption">Operator Option</string>
    <string name="addoperator">Add Operator</string>
    <string name="id">Id :</string>
    <string name="password">Password :</string>
    <string name="confirm">Confirm</string>
    <string name="operatorid">Operator Id</string>
    <string name="pass">Password</string>
    <string name="entermobileno">Mobile Number</string>
    <string name="enterchecknoonly">Enter Check Number</string>
    <string name="entermicrno">Enter MICR Number</string>
    <string name="changepin">Change Pin</string>
    <string name="rocno">ROC Number</string>
    <string name="changecardpin">Change Card Pin</string>
    <string name="unblockcardpin">Unblock Card Pin</string>
    <string name="entervalidmicrno">Enter Valid MICR Number</string>
    <string name="entercardpin">Enter  Card Pin</string>
    <string name="cardpin">Card Pin</string>
    <string name="entervalidcheqno">Enter Valid Cheque Number</string>
    <string name="cardpinchanged">Card Pin Changed</string>
    <string name="entervalidoldpin">Enter Valid Old Pin</string>
    <string name="entervalidnewpin">Enter Valid New Pin</string>
    <string name="entervalidreintpin">Enter Valid Re-Enter new pin</string>
    <string name="mismatchnewpin">Mismatch New Pin</string>
    <string name="mismatchterminalpin">Mismatch Terminal Pin</string>
    <string name="cardunblock">Card Unblocked Successfully</string>
    <string name="ctrlcardno">Control Card Number</string>
    <string name="entervalidutrno">Enter Valid UTR Number</string>
    <string name="voidpayback">Payback Void</string>
    <string name="ok">OK</string>
    <string name="enterterminalp">Enter Terminal Pin</string>
    <string name="cardunblocksuccess">Card Unblocking Success.</string>
    <string name="enterpassword">Enter Password</string>
    <string name="enteropeartorid">Enter Operator Id</string>
    <string name="cardsale">Card Sale</string>
    <string name="ccmssale">CCMS SALE</string>
    <string name="dtplus">DTPLUS</string>
    <string name="fasttag">FAST TAGS</string>
    <string name="seletcttype">SELECT TYPE</string>
    <string name="hdfc">HDFC</string>
    <string name="idfc">IDFC</string>


    <!-- printer -->
    <string name="printer_fontset_ascii">ascii:</string>
    <string name="printer_fontset_extcode">extCode:</string>
    <string name="printer_bitmap_contain">contain bitmap</string>
    <string name="printer_bitmap_no">no bitmap</string>
    <string name="printer_spaceset_word">word space</string>
    <string name="printer_spaceset_line">line space</string>
    <string name="printer_leftindent">left indent</string>
    <string name="printer_setgray">set gray</string>
    <string name="printer_double_width">double width</string>
    <string name="printer_normal_width">normal width</string>
    <string name="printer_double_height">double height</string>
    <string name="printer_normal_height">normal height</string>
    <string name="printer_invert">invert print</string>
    <string name="printer_normal">normal print</string>
    <string name="printer_step">print step</string>
    <string name="printer_status">getStatus</string>
    <string name="printer_getdotline">getDotLine</string>
    <string name="printer_prnstr">print string </string>
    <string name="printer_start">start</string>
    <string name="printer_edit_hint">0</string>
    <string name="printer_edit_gray_hint">1</string>
    <string name="printer_step_hint">150</string>
    <string name="printer_test_str">打印测试语句ABCabc123~!#$富豪コンピュータ</string>

    <!-- mag -->
    <string name="mag_swipe_card">Please swipe the card…</string>
    <string name="mag_card_error">read card error</string>
    <string name="mag_track1_data">\ntrack1 data：</string>
    <string name="mag_track2_data">\ntrack2 data：</string>
    <string name="mag_track3_data">\ntrack3 data：</string>

    <!-- icc -->
    <string name="icc_detect_nocard">Plese insert the card…</string>
    <string name="icc_detect_havecard">have detected the card</string>
    <string name="nointernetconnection">No Internet Connection</string>
    <string name="about">About</string>
    <string name="softwareVer">Software Version</string>
    <string name="buildType">Build Type</string>
    <string name="buildDate">Build Date</string>
    <string name="romVersion">Rom Version</string>
    <string name="firmwareVer">Fireware Version</string>
    <string name="serviceVer">Service Version</string>
    <string name="modelName">Model Name</string>
    <string name="serialNo">Serial Number</string>
    <string name="osVersion">OS Version</string>
    <string name="simStatus">Sim Status</string>
    <string name="balance">BALANCE</string>
    <string name="settlement_in_progress">Please wait\nSettlement in progress</string>
    <string name="please_swipe">Please Swipe Again</string>
    <string name="insert_card">Please Insert Card again</string>
    <string name="customer_copy">CUSTOMER COPY</string>
    <string name="merchant_copy">MERCHANT COPY</string>
    <string name="hpcl">HPCL</string>
    <string name="label_ok">OK</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="success">Success: </string>
    <string name="ok_text">OK</string>
    <string name="amount">Amount</string>
    <string name="void_amount">Void Amount</string>
    <string name="transactionType">Transaction Type</string>
    <string name="card_no">Card No</string>
    <string name="insert_swipe_or_enter_mobile">Insert/Swipe Card or Enter Mobile No.</string>
    <string name="ccms_to_card">CCMS to Card</string>
    <string name="card_to_ccms">Card to CCMS</string>
    <string name="enter_min_9_digits">Enter Min. 9 digits</string>
    <string name="title_settlement">Settlement </string>
    <string name="title_registration">Registration </string>
    <string name="settlement_ok">Settlement OK</string>
    <string name="settlement">SETTLEMENT</string>
    <string name="count">COUNT</string>
    <string name="total">TOTAL</string>
    <string name="settle">Settle</string>
    <string name="remind">Remind</string>
    <string name="message">This Transaction is for payment recieved by</string>
    <string name="terminalPin">Terminal Pin</string>
    <string name="addOperator">Add Operator</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="delete">Delete</string>
    <string name="fasttag_bankname">FASTTAG BANK NAME</string>
    <string name="enter_mobile_no">Enter Mobile No.</string>
    <string name="enter_vehicle_no">Enter Vehicle No.</string>
    <string name="enter_last_4_digits_vehicle_no">Enter Last 4 digit Vehicle No</string>
    <string name="last_4_digits">Last 4 digits</string>
    <string name="operator_options">Operator Options</string>
    <string name="terminal_id">Terminal Id</string>
    <string name="please_add_operator">Please Add Operator</string>
    <string name="registration_alert_message">Please Register the Terminal to Perform Tarnsactions</string>
    <string name="server_ip">Server IP</string>
    <string name="server_port">Server Port</string>
    <string name="second_server_ip">Second Server IP</string>
    <string name="second_server_port">Second Server Port</string>
    <string name="communication_timeout_sec">Comm Timeout second</string>
    <string name="apn">APN</string>
    <string name="userName">UserName</string>
    <string name="transaction_cancelled">Transaction Cancelled</string>
    <string name="back_to_main_menu"> BACK TO MAIN MENU</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="batch_id">Batch Id</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="token_number">Token Number</string>
    <string name="enter_control_card_number"> Enter Control Card Number</string>
    <string name="form_number">Form Number</string>
    <string name="number_of_cards">Number of Cards</string>
    <string name="dtp_amount">DTP AMOUNT</string>
    <string name="card_count">CARD COUNT</string>
    <string name="enter_utr_number">UTR Number</string>
    <string name="enter_control_pin">Enter Control PIN</string>
    <string name="enter_card_pin">Enter Card PIN</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_old_pin">Enter Old Pin</string>
    <string name="enter_new_pin">Enter New Pin</string>
    <string name="enter_reenter_new_pin">Re-Enter New Pin</string>
    <string name="input_required">Input Required</string>
    <string name="enter_terminal_pin">Enter Terminal Pin</string>
    <string name="reenter_terminal_pin">Re-Enter Terminal Pin</string>
    <string name="select_product">SELECT PRODUCT</string>
    <string name="select_transaction_type">SELECT TRANSACTION TYPE</string>
    <string name="paycode">Paycode</string>
    <string name="earn">EARN</string>
    <string name="burn">BURN</string>
</resources>