<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="@dimen/_1dp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginRight="@dimen/_1dp"
            android:layout_marginBottom="@dimen/_1dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/gotoBack"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/back_icon">

                </ImageView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="35dp"
                android:fontFamily="@font/ptregular"
                android:gravity="center"
                android:lines="1"
                android:text="@string/settlement"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="normal"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_fragment_white"
            app:layout_constraintTop_toBottomOf="@+id/actionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_marginStart="@dimen/_135sdp"
                        android:layout_width="@dimen/_70sdp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content"
                        android:text="@string/count"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="@dimen/_65sdp"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:text="@string/total"
                        android:textAlignment="center" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCardedAndMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/clickSettlement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settle"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>