<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center">


                <LinearLayout
                    android:id="@+id/gotoBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center">

                    <ImageView

                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:background="@drawable/back_icon">

                    </ImageView>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="35dp"
                    android:fontFamily="@font/ptregular"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/unblockcardpin"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="normal">

                </TextView>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_fragment_white"
                app:boxStrokeColor="@color/light_blue">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:hint="@string/enternewpin"
                    app:passwordToggleEnabled="true"
                    android:textColorHint="@color/light_blue"
                    app:boxStrokeColor="@color/light_blue"
                    app:hintTextColor="@color/colorBlack"
                    app:layout_constraintTop_toTopOf="@+id/constLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/rocNo_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    app:passwordToggleEnabled="true"
                    android:hint="@string/reenternewpin"
                    android:textColorHint="@color/light_blue"
                    app:hintTextColor="@color/colorBlack"
                    app:layout_constraintTop_toBottomOf="@+id/outlinedTextField1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reEnterrocNo_EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:inputType="number"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </RelativeLayout>
</layout>